# INF2004-Embedded-CoAP-Project-2025

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  lwipopts.h  ws2812.c  ws2812.h
external_libraries/microcoap/: LICENSE.txt  coap.c  coap.h
external_libraries/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: hw_config.c  sd_card.c
src/: README.md  coap_client.c  coap_server.c
src/cs04_coap/: cs04_coap_packet.c  cs04_coap_packet.h  cs04_coap_reliability.c  cs04_coap_reliability.h  cs04_hardware.c  cs04_hardware.h
test/: README.md  integration_testing.md  unit_component_test.c
